{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e2d55949-683c-434f-a576-dfed7de5fad6",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "ebcc3ab2-afea-4630-80f9-bf14aa5dfacc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Vertical",
                    "type": "Button",
                    "id": "335b51f3-5f94-4861-be42-4601289db4d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Power",
                    "type": "Button",
                    "id": "262cb53f-5b92-41cc-b073-a1cd605708a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sincronia",
                    "type": "Button",
                    "id": "a4695909-b426-4d96-9cf3-4978ddf199fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "SincroniaRelease",
                    "type": "Button",
                    "id": "4999ecae-ac03-4cb8-a7bb-e1eb0eb4a257",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "89b8d52e-c742-4a35-9153-b40280178321",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1ff24a1b-471d-423a-9291-21078c811ec5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "cf91555a-eded-4da4-9dd3-b1b6d86f728b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "f7258e44-e4ed-4a8f-91e2-5dccfdfdf39a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bef7dbea-992f-4d39-80d2-dc26eecc07fc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "79d6e058-188a-42d4-89b2-540e55336000",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bb0562aa-1a62-48f0-816f-417f254842b1",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Power",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0fa03b5-a9c7-4f7c-a64b-ad340aceb53a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sincronia",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a61ffd34-8c87-409f-806e-36fcf33299e4",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SincroniaRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "e9880815-b9f3-4361-8acf-f2bc034a74af",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "903ec7fe-66a8-4c0a-882b-f44c8536d141",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Vertical",
                    "type": "Button",
                    "id": "6084b93f-18c1-440b-9393-c2d00c58d4c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Power",
                    "type": "Button",
                    "id": "62ae706a-eb66-40fc-a3f4-fbd79a0960e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ReleasePower",
                    "type": "Button",
                    "id": "d49bef76-06a4-408e-a61d-ebda5d9215a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sincronia",
                    "type": "Button",
                    "id": "2322f365-4bec-4812-ab7d-21fd56226c45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "SincroniaRelease",
                    "type": "Button",
                    "id": "96e5becf-d51f-4562-95ce-5dfaa0d46427",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "1afc263d-061a-4dca-b68a-fb92ffeed0a3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7efa3d8e-5696-47d9-9154-799a4f4a62b9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "846b23cb-512c-4692-a7af-6e57d4972fda",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "a661eb71-a9c5-4ecd-9f3c-372ef405799a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f7022d54-c425-4e98-b5ee-1716ef598dee",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5f771586-54e8-4753-b43e-e54d0b327764",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dd7a60b1-5a7a-4489-b10a-d56050971f0c",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Power",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "848a97c9-9fc5-4bf5-8ad6-de49f24488e1",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ReleasePower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a68781e7-45cc-4e4f-8707-500b5d646b61",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sincronia",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef5ebcf0-9d93-4d59-9a68-408a18ee2cbc",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SincroniaRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameMisc",
            "id": "2e4636b7-ed09-4099-9fc5-4363ae47652d",
            "actions": [
                {
                    "name": "DialoguePass",
                    "type": "Button",
                    "id": "b295b318-a2a7-4d5f-b8cb-d60e68180546",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "8ed11432-ebd2-4bb4-b51f-cff83e1d70b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7208112c-4183-4427-804b-e2f61ec2f855",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "DialoguePass",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6550af30-b017-4aa2-b328-1e2a23237779",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CardMenu",
            "id": "a82d2d58-93a9-460d-bd1e-396400e9b2ed",
            "actions": [
                {
                    "name": "GoForward",
                    "type": "Button",
                    "id": "03d0dc6c-19a7-4d0d-907b-d80f8116a007",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoBackwards",
                    "type": "Button",
                    "id": "089e3107-834f-4604-a0fc-d118174db132",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BackToMenu",
                    "type": "Button",
                    "id": "1ea14f18-05d8-4cdb-8683-642a6bdba807",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "74e69574-06c2-4587-8031-7717b4333bbd",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "GoForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70521dbc-fda7-4ad3-9123-299bb89e7999",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "GoForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fda8bb61-3165-4fb7-b4dc-33cc2a1ba5f5",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "GoBackwards",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84f59df3-d119-4be9-88bf-e0fb51b997a3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "GoBackwards",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb1b51d7-0c79-493f-aa0e-51dbd64ba0db",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackToMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseMenu",
            "id": "77bff625-2e47-4aae-9ad7-0ab2a6724bf4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "ae547de5-f52f-4f07-a54b-c2beee05d046",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "select",
                    "type": "Button",
                    "id": "7a748c9d-c40b-49cd-be99-407492f52b1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d191ee42-ed79-4a3a-9bbf-fc0d0f1d5050",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "074f27ed-197a-4d5a-b561-85a1fbc64547",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "67f82d83-98d7-4434-aaf2-e116d67eb6b8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5bbdaf69-6d05-4573-b665-5ec513c986e9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "115ceee7-8b51-42e9-b589-af8f4ccb498f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "0062486c-a501-4ebb-a8cd-c544d5ab577a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4635a4d2-61a9-438f-b763-e51261bf14d9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "47744ec2-e1f5-419b-ba48-984fbe27b6e0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8767cd11-e0ae-4339-9acf-12a85ed47898",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "92b37a1c-09b6-4e7a-a321-174bd1c224b5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f328240a-6cf5-47c1-86e6-f60ad8b2ec14",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}